Project

General

Profile

Actions

Bug #4575

closed

Single threaded rpcbind is not scalable

Added by Marcel Telka over 9 years ago. Updated about 9 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
nfs - NFS server and client
Start date:
2014-02-05
Due date:
% Done:

100%

Estimated time:
Difficulty:
Hard
Tags:
Gerrit CR:
External Bug:

Description

In a case there are many (thousands) clients trying to talk with rpcbind in the same time, the single threaded rpcbind will handle the requests sequentially. Since the request handling (plus sending the response to the client) is usually much slower than receiving the request, the last arrived request might be serviced after very long time.

To solve this issue we should make the rpcbind multithreaded.


Related issues

Related to illumos gate - Bug #4483: rpcbind: Reply for remote calls comes from incorrect UDP portResolvedMarcel Telka2014-01-15

Actions
Related to illumos gate - Bug #4308: svc_userfds reallocation in svc_add_input() is fragileResolvedMarcel Telka2013-11-08

Actions
Related to illumos gate - Bug #4289: libnsl: do_accept() shouldn't be recursiveResolvedMarcel Telka2013-11-05

Actions
Related to illumos gate - Bug #4908: rpcbind NULL ptr dereference at forward_destroy+0x22()ClosedMarcel Telka2014-06-03

Actions
Actions #1

Updated by Robert Mustacchi about 9 years ago

  • Status changed from In Progress to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (needs-triage)
Actions #2

Updated by Electric Monk about 9 years ago

git commit 8f6d9dae92449b59bdafcb7777bc32f1b2726e48

Author: Marcel Telka <marcel.telka@nexenta.com>

4575 Single threaded rpcbind is not scalable
4483 rpcbind: Reply for remote calls comes from incorrect UDP port
Reviewed by: Ilya Usvyatsky <ilya.usvyatsky@nexenta.com>
Reviewed by: Jan Kryl <jan.kryl@nexenta.com>
Reviewed by: Michael Schuster <michaelsprivate@gmail.com>
Reviewed by: Gary Mills <gary_mills@fastmail.fm>
Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com>
Approved by: Robert Mustacchi <rm@joyent.com>

Actions

Also available in: Atom PDF